firewall/iptables.032014.conf
*raw
:PREROUTING ACCEPT
:OUTPUT ACCEPT

-A PREROUTING -p tcp --dport 21 -j CT --helper ftp

-A PREROUTING -p tcp -m multiport ! --dports {ports} -j CT --notrack

COMMIT

*filter
:INPUT DROP
:FORWARD DROP
:OUTPUT ACCEPT

:F2BxINPUT -

#  Allow all loopback (lo0) traffic and drop all traffic to 127/8 that doesn't use lo0
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -j ACCEPT

#  Accept all established inbound connections
-A INPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT

#fail2ban checks
-A INPUT -j F2BxINPUT

-A INPUT -p tcp -m multiport --dports {ports} -j ACCEPT

#  Allow ping
# -A INPUT -p icmp -j ACCEPT

-A INPUT -p tcp -j TARPIT

## --------------------------------------------------------------------------------
##
##                                       OUPUT RULES
##
## --------------------------------------------------------------------------------

#wp plugin site
-A OUTPUT  -d 162.13.95.239 -j DROP

-A OUTPUT -m set --match-set known dst -j ACCEPT
-A OUTPUT -m multiport -p tcp --dports 53,953 -j ACCEPT
-A OUTPUT -m multiport -p udp --dports 53,953 -j ACCEPT

#-A OUTPUT  -m conntrack --ctstate NEW -m limit --limit 5/min -m owner --uid-owner www-data -j LOG --log-prefix "iptables output: +www$

-A OUTPUT  -m conntrack --ctstate NEW -m limit --limit 5/min -j LOG --log-prefix "iptables output: " --log-level 7 --log-uid


## --------------------------------------------------------------------------------


## --------------------------------------------------------------------------------
##
##                                       OLD TEST RULES
##
## --------------------------------------------------------------------------------

#-A INPUT -d 127.0.0.0/8 -j REJECT

#-A INPUT -i eth0 -m recent --name PORTSCAN --update --seconds 43600 -j DROP

#  Log iptables denied calls
#-A INPUT -m limit --limit 5/min -j LOG --log-prefix "iptables denied: " --log-level 7

#  Drop all other inbound - default deny unless explicitly allowed policy
#-A INPUT -m recent --name PORTSCAN --set -j DROP

## --------------------------------------------------------------------------------


COMMIT
